assets/css/style.css
.navbar-nav {
  display: flex;
  flex-direction: column;
  list-style: none;
}

.navbar-nav .nav-link {
  padding-right: 0;
  padding-left: 0;
}

.banner-image {
  background-image: url("/assets/images/hero_surgery.png");
  background-size: cover;
  background-position: center;
  filter: grayscale(80%);
  -webkit-filter: grayscale(80%);
  -moz-filter: grayscale(80%);
  -o-filter: grayscale(80%);
  filter: brightness(80%);
}


.nav-item {
  margin-left: 30px;
}

.nav-link {
  font-family: 'roboto', sans-serif;
  font-size: 15px;
  font-weight: 300;
  text-transform: uppercase;
  color: #f6f8f9;
}

.bg-color-nav {
  background-color: rgba(33, 37, 41, 0.7);
}

.tagline-format {
  font-family: 'roboto', sans-serif;
  text-transform:initial;
  font-weight: 200;
  font-size: 40px;
  color:#f6f8f9;
}

.name-format {
  font-family: 'roboto', sans-serif;
  text-transform:initial;
  font-weight: 200;
  font-size: 30px;
  color:#f6f8f9;
}

.title-format {
  font-family: 'roboto', sans-serif;
  text-transform:initial;
  font-weight: 200;
  font-size: 25px;
  color:#f6f8f9;
}

.pg-text-format {
  font-family: 'roboto', sans-serif;
  text-transform:initial;
  font-weight: 300;
  font-size: 18px;
  color:rgb(33, 37, 41);
}

.pg-text-format a {
  text-decoration: none;
  color:rgb(33, 37, 41);
}

.pg-text-format-large {
  font-family: 'roboto', sans-serif;
  text-transform:initial;
  font-weight: 300;
  font-size: 22px;
  color:rgb(33, 37, 41);
}

.hearing-image {
    background: url("/assets/images/hearing.png") no-repeat center center fixed;
    height: 50vh;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
  }

  .headache-image {
    background: url("/assets/images/headache.png") no-repeat center center fixed;
    height: 50vh;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
  }

  .eye-image {
    background: url("/assets/images/eye.jpg") no-repeat center center fixed;
    height: 50vh;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
  }

  .eye-2-image {
    background: url("/assets/images/eye-2.jpg") no-repeat center center fixed;
    height: 50vh;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
  }

  .headache-woman-image {
    background: url("/assets/images/headache-woman.jpg") no-repeat center center fixed;
    height: 50vh;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
  }
  }

  .conference-image {
    background: url("/assets/images/conference.jpg") no-repeat center center fixed;
    height: 80vh;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
  }



  .padding-top {
    padding-top: 120px; 
  }


  /* Form from example */

  .form-section {
    /* clear: left; */
    background: url("/assets/images/stethoscope.jpg");
    background-size: cover;
    background-position: center;
    height:900px;
}

.signup-form {
    margin-top:80px;
    color:#fff;
    background-color: rgba(60, 60, 60, 0.6);
    max-width:400px;
    border-radius:10px;
    left:10%;
    padding:30px;
}

.signup-form h2 {
    color:#fafafa;
    margin-bottom:20px;
}

.text-input {
    background: transparent;
    color:#fafafa;
    width:100%;
    height:25px;
    margin:5px 0 20px 0;
    border:1px solid #ccccce;
    border-radius:5px;
}

.text-input:hover{
    border-color:rgb(33, 37, 41);
}

.text-input2:hover{
  border-color:rgb(33, 37, 41);
}

.contact-form {
  font-family: 'roboto', sans-serif;
  font-weight: 200;
  font-size: 18px;
  text-transform: uppercase;
  color: #f6f8f9;
}

.contact-form2 {
  font-family: 'roboto', sans-serif;
  font-weight: 200;
  font-size: 14px;
  text-transform: uppercase;
  color: #f6f8f9;
}

.contact-form3 {
  font-family: 'roboto', sans-serif;
  font-weight: 300;
  font-size: 14px;
  text-transform: uppercase;
  color: rgb(12, 12, 12);
}

.info-page-title {
  font-family: 'roboto', sans-serif;
  font-weight: 300;
  font-size: 25px;
  color: rgb(12, 12, 12);
}

.container {
  min-height: 200px;
}

